# textcat

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: error_analysis.ipynb  generate_dfs.ipynb  slice_from_mpid.ipynb
notebooks/comperison_multiview/: create_test_data.ipynb
notebooks/regression/: regression_analysis.ipynb
notebooks/translation/: translation_analysis.ipynb
src/textcat/: constants.py  format.py  utils.py
src/textcat/ml/: nn.py  numbart_wrapper.py  numbert_wrapper.py  train_utils.py  validation_utils.py
src/textcat/ml/datacollector/: num_datacollator.py
src/textcat/ml/dataset/: mlm_dataset.py  regression_dataset.py  translation_dataset.py
src/textcat/ml/tokenizer/: adsorption_tokenizer.py  bert_tokenizer.py  config.toml
src/textcat/scripts/: compare_strategies.py  finetune_bert.py  gen_bert_fingerprints.py  gen_hetsmiles.py  gen_raw_datasets.py  gen_regression_predictions.py  gen_translation_predictions.py  mlm_bert.py  train_rf_bert_fingerprints.py  translate_bart.py
src/textcat/slice/: slice_encoder.py
